cmake_minimum_required(VERSION 2.8)
project(YRSSF_core)
add_compile_options(-std=c++0x)
include_directories(leveldb/include)
include_directories(./)
add_executable(YRSSF main.cpp)
target_link_libraries(YRSSF lua)
target_link_libraries(YRSSF dl)
target_link_libraries(YRSSF ssl)
target_link_libraries(YRSSF crypto)
target_link_libraries(YRSSF jpeg)
target_link_libraries(YRSSF z)